--- a/MetaPlanner/App.xaml
+++ b/MetaPlanner/App.xaml
@@ -2,6 +2,6 @@
     x:Class="MetaPlanner.App"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:local="using:MetaPlanner">
-
+    xmlns:local="using:MetaPlanner"
+    RequestedTheme="Dark">
 </Application>
