--- a/MetaPlanner/MainPage.xaml
+++ b/MetaPlanner/MainPage.xaml
@@ -1,13 +1,12 @@
-﻿<Page
+﻿<Page xmlns:my="using:Telerik.UI.Xaml.Controls.DataVisualization" 
     x:Class="MetaPlanner.MainPage"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:local="using:MetaPlanner"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-    xmlns:telerik="using:Telerik.UI.Xaml.Controls.Chart"
-    xmlns:telerikGrid="using:Telerik.UI.Xaml.Controls.Grid"
-    mc:Ignorable="d"
+    xmlns:telerik="using:Telerik.UI.Xaml.Controls.DataVisualization"
+    xmlns:telerikGrid="using:Telerik.UI.Xaml.Controls.Grid" 
+      mc:Ignorable="d"
     Background="{ThemeResource ApplicationPageBackgroundThemeBrush}" Height="1982">
 
     <Grid RenderTransformOrigin="0.539,0.213">
@@ -17,16 +16,34 @@
         </Grid.RowDefinitions>
 
         <StackPanel Background="Black">
-             <telerikGrid:RadDataGrid x:Name="PlanGrid" Grid.Row="0" ItemsSource="{Binding}" Height="700" Background="DarkGray">
+            <telerikGrid:RadDataGrid x:Name="PlanGrid" Grid.Row="0" 
+                                     ItemsSource="{Binding}" Height="400" Background="DarkGray">
             </telerikGrid:RadDataGrid>
+            
             <StackPanel Orientation="Horizontal" HorizontalAlignment="Right">
-                    <TextBlock x:Name="lblMessage" Text="0" VerticalAlignment="Center" HorizontalAlignment="Right" Padding="5"  Margin="5" FontFamily="Segoe Ui"/>
                 <Button x:Name="btnLoad" Content="Load" HorizontalAlignment="Right" Padding="5" Click="CallGroupButton_Click" Margin="5" FontFamily="Segoe Ui"/>
+               
+                <telerik:RadRadialGauge x:Name="RadialGauge" 
+                                   Height="80" MinValue="0" MaxValue="100" 
+                                   MaxAngle="180" MinAngle="0" LabelRadiusScale="1.10" 
+                                   TickStep="10" LabelStep="20" Padding="15"  Margin="15" Visibility="Collapsed">
+
+                    <telerik:RadialBarGaugeIndicator x:Name="Bar" Brush="Green" Thickness="5" Margin="10"/>
+
+
+
+                </telerik:RadRadialGauge>
+
                 <Button x:Name="btnCall" Content="Call Microsoft Graph API" HorizontalAlignment="Right" Padding="5" Click="CallGraphButton_Click" Margin="5" FontFamily="Segoe Ui"/>
-                <Button x:Name="SignOutButton" Content="Sign-Out" HorizontalAlignment="Right" Padding="5" Click="SignOutButton_Click" Margin="5" Visibility="Collapsed" FontFamily="Segoe Ui"/>
+                <Button x:Name="SignOutButton" Content="Sign-Out" HorizontalAlignment="Right" Padding="5" Click="SignOutButton_Click" Margin="5" FontFamily="Segoe Ui" Visibility="Collapsed"/>
                 <Image Source="/Assets/SmallTile.scale-100.png" VerticalAlignment="Center" HorizontalAlignment="Right" Margin="1" Height="100"/>
+
+
+
             </StackPanel>
+            <TextBlock x:Name="lblMessage" Text="0" VerticalAlignment="Center" HorizontalAlignment="Left" Padding="1"  Margin="1" Height="20" FontFamily="Segoe Ui"/>
+
         </StackPanel>
     </Grid>
-    
+
 </Page>
