--- a/MetaPlanner/MainPage.xaml
+++ b/MetaPlanner/MainPage.xaml
@@ -32,6 +32,10 @@
             </telerikGrid:RadDataGrid>
            
             <StackPanel Orientation="Horizontal" HorizontalAlignment="Right">
+                <Button x:Name="btnClean" Content="Borrar" HorizontalAlignment="Right" Padding="5" Click="CleanAllSharePointLists" Margin="5" FontFamily="Segoe Ui"/>
+
+                <Button x:Name="btnLoadPlans" Content="Planes" HorizontalAlignment="Right" Padding="5" Click="ProcessPlans" Margin="5" FontFamily="Segoe Ui"/>
+
                 <Button x:Name="btnLoad" Content="Load" HorizontalAlignment="Right" Padding="5" Click="CallGroupButton_Click" Margin="5" FontFamily="Segoe Ui"/>
                
                 <telerik:RadRadialGauge x:Name="RadialGauge" 
