--- a/MetaPlanner/MainPage.xaml
+++ b/MetaPlanner/MainPage.xaml
@@ -35,6 +35,8 @@
                 <Button x:Name="btnClean" Content="Borrar" HorizontalAlignment="Right" Padding="5" Click="CleanAllSharePointLists" Margin="5" FontFamily="Segoe Ui"/>
 
                 <Button x:Name="btnLoadPlans" Content="Planes" HorizontalAlignment="Right" Padding="5" Click="ProcessPlans" Margin="5" FontFamily="Segoe Ui"/>
+                <Button x:Name="btnLoadBuckets" Content="Depósitos" HorizontalAlignment="Right" Padding="5" Click="ProcessBuckets" Margin="5" FontFamily="Segoe Ui"/>
+                <Button x:Name="btnLoadTasks" Content="Tareas" HorizontalAlignment="Right" Padding="5" Click="ProcessTasks" Margin="5" FontFamily="Segoe Ui"/>
 
                 <Button x:Name="btnLoad" Content="Load" HorizontalAlignment="Right" Padding="5" Click="CallGroupButton_Click" Margin="5" FontFamily="Segoe Ui"/>
                
