--- a/MetaPlanner/MainPage.xaml
+++ b/MetaPlanner/MainPage.xaml
@@ -33,6 +33,7 @@
            
             <StackPanel Orientation="Horizontal" HorizontalAlignment="Right">
                 <Button x:Name="btnClean" Content="Borrar" HorizontalAlignment="Right" Padding="5" Click="btnClean_Click" Margin="5" FontFamily="Segoe Ui"/>
+                <Button x:Name="btnLoadAll" Content="Sincronizar" HorizontalAlignment="Right" Padding="5" Click="btnLoadAll_Click" Margin="5" FontFamily="Segoe Ui"/>
                 <Button x:Name="btnLoadPlans" Content="Planes" HorizontalAlignment="Right" Padding="5" Click="btnLoadPlans_Click" Margin="5" FontFamily="Segoe Ui"/>
                 <Button x:Name="btnLoadBuckets" Content="Depósitos" HorizontalAlignment="Right" Padding="5" Click="btnLoadBuckets_Click" Margin="5" FontFamily="Segoe Ui"/>
                 <Button x:Name="btnLoadTasks" Content="Tareas" HorizontalAlignment="Right" Padding="5" Click="btnLoadTasks_Click" Margin="5" FontFamily="Segoe Ui"/>
