--- a/MetaPlanner/MainPage.xaml
+++ b/MetaPlanner/MainPage.xaml
@@ -38,7 +38,7 @@
                 <Button x:Name="btnLoadBuckets" Content="Buckets" HorizontalAlignment="Right" Padding="5" Click="btnLoadBuckets_Click" Margin="5" FontFamily="Segoe Ui"/>
                 <Button x:Name="btnLoadTasks" Content="Tasks" HorizontalAlignment="Right" Padding="5" Click="btnLoadTasks_Click" Margin="5" FontFamily="Segoe Ui"/>
                 <Button x:Name="btnLoadUsers" Content="Users" HorizontalAlignment="Right" Padding="5" Click="btnLoadUsers_Click" Margin="5" FontFamily="Segoe Ui"/>
-                <Button x:Name="btnLoadAllUsers" Content="All Users" HorizontalAlignment="Right" Padding="5" Click="btnLoadAllUsers_Click" Margin="5" FontFamily="Segoe Ui"/>
+                <Button x:Name="btnLoadAllUsers" Content="AD Users" HorizontalAlignment="Right" Padding="5" Click="btnLoadADUsers_Click" Margin="5" FontFamily="Segoe Ui"/>
 
 
                 <telerik:RadRadialGauge x:Name="RadialGauge" 
